apps/piped/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piped-backend
  namespace: piped
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: piped-backend
  template:
    metadata:
      labels:
        app: piped-backend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: gluetun
          image: qmcgaw/gluetun@sha256:b0ee2135e6ba52ad3f102aae9663707cd1c9531485117067a380d3b2b6dd991d
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
        - name: piped-backend
          image: 1337kavin/piped-backend:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /app/config.properties
              subPath: config.properties
      volumes:
        - name: config
          configMap:
            name: piped-backend-config
