apps/piped/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piped-frontend
  namespace: piped
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: piped-frontend
  template:
    metadata:
      labels:
        app: piped-frontend
    spec:
      containers:
        - name: piped-frontend
          image: 1337kavin/piped-frontend:latest
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
