apps/piped/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: piped-backend
  namespace: piped
spec:
  type: ClusterIP
  selector:
    app: piped-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
