apps/piped/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: piped-frontend
  namespace: piped
spec:
  type: ClusterIP
  selector:
    app: piped-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
