apps/piped/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piped
  namespace: piped
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: yt.def4alt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: piped-frontend
                port:
                  number: 80
  tls:
    - secretName: piped-tls
      hosts:
        - yt.def4alt.com
